fleet/godemo-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: godemo
  labels:
    app: godemo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: godemo-dev
  template:
    metadata:
      labels:
        app: godemo-dev
    spec:
      containers:
        - name: godemo
          image: ghcr.io/alexuresp/godemo-dev:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
