fleet/godemo-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: godemo
  labels:
    app: godemo-dev
spec:
  selector:
    app: godemo-dev
  ports:
    - name: http
      port: 80
      targetPort: http
