fleet/godemo-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: godemo
  labels:
    app: godemo-dev
spec:
  rules:
    - host: godemo-dev.192-168-1-103.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: godemo
                port:
                  number: 80
